# ant-simulation

./: Cargo.toml  README.md
src/: ant.rs  food.rs  home.rs  main-copy.rs  main.rs  utils.rs
