[package]
name = "ant-simulation"
version = "0.1.0"
authors = ["Uday Goyat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.8.3"
rayon = "1.5"
arrayvec = "0.7.1"
inferno = "0.10.6"

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
